--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@stackrole/gatsby-starter-foundation",
-  "description": "A starter to launch your blazing fast personal website and a blog, Built with Gatsby and Netlify CMS. Made with ❤ by Stackrole",
+  "name": "thucldnguyen-gatsby-blog",
+  "description": "Thuc Nguyen personal blog about Test Automation and Product Management",
   "version": "1.0.0",
-  "author": "Stackrole <stackrole@gmail.com>",
-  "license": "MIT",
+  "author": "Thuc Nguyen <thucld.nguyen@gmail.com>",
+  "license": "Proprietary",
   "repository": {
     "type": "git",
-    "url": "https://github.com/stackrole/gatsby-starter-foundation.git"
+    "url": "https://github.com/thucldnguyen"
   },
   "bugs": {
-    "url": "https://github.com/stackrole/gatsby-starter-foundation/issues"
+    "url": "https://github.com/thucldnguyen"
   },
   "scripts": {
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
