--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -117,7 +117,7 @@ collections:
               - widget: image
                 name: image
                 label: image
-                default: '/assets/stackrole.png'
+                default: '/assets/logo-transparent.png'
               - widget: image
                 name: iconimage
                 label: favicon
