--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "disqus-react": "^1.0.10",
     "gatsby": "^2.21.33",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-advanced-sitemap": "^1.5.4",
+    "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-google-analytics": "^2.3.2",
     "gatsby-plugin-manifest": "^2.4.3",
     "gatsby-plugin-netlify-cms": "^4.3.2",
