--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "disqus-react": "^1.0.10",
-    "gatsby": "^2.21.33",
+    "gatsby": "^2.32.9",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-advanced-sitemap": "^1.5.4",
@@ -38,6 +38,8 @@
     "gatsby-plugin-sharp": "^2.6.3",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-remark-images": "^3.3.3",
+    "gatsby-remark-images-medium-zoom": "^1.7.0",
+    "gatsby-remark-images-zoom": "^1.1.0",
     "gatsby-remark-prismjs": "^3.5.1",
     "gatsby-remark-reading-time": "^1.1.0",
     "gatsby-remark-responsive-iframe": "^2.4.2",
