--- a/package.json
+++ b/package.json
@@ -21,47 +21,48 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "disqus-react": "^1.0.10",
-    "gatsby": "^2.32.9",
-    "gatsby-background-image": "^1.1.1",
-    "gatsby-image": "^2.4.3",
-    "gatsby-plugin-advanced-sitemap": "^1.5.4",
-    "gatsby-plugin-disqus": "^1.2.2",
-    "gatsby-plugin-google-analytics": "^2.3.2",
-    "gatsby-plugin-manifest": "^2.4.3",
-    "gatsby-plugin-netlify": "^2.11.0",
-    "gatsby-plugin-netlify-cms": "^4.3.2",
+    "@theme-ui/prism": "^0.14.7",
+    "disqus-react": "^1.1.5",
+    "gatsby": "^4.0.0",
+    "gatsby-plugin-advanced-sitemap": "^2.1.0",
+    "gatsby-plugin-disqus": "^1.2.6",
+    "gatsby-plugin-feed": "^4.0.0",
+    "gatsby-plugin-google-analytics": "^4.0.0",
+    "gatsby-plugin-image": "^2.0.0",
+    "gatsby-plugin-manifest": "^4.0.0",
+    "gatsby-plugin-netlify": "^4.0.0",
+    "gatsby-plugin-netlify-cms": "^6.0.0",
     "gatsby-plugin-netlify-cms-paths": "^1.3.0",
-    "gatsby-plugin-offline": "^3.2.2",
-    "gatsby-plugin-react-helmet": "^3.3.1",
-    "gatsby-plugin-sass": "^2.3.1",
-    "gatsby-plugin-sharp": "^2.6.3",
-    "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-remark-images": "^3.3.3",
+    "gatsby-plugin-offline": "^5.0.0",
+    "gatsby-plugin-react-helmet": "^5.0.0",
+    "gatsby-plugin-sass": "^5.0.0",
+    "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-plugin-sitemap": "^5.0.0",
+    "gatsby-plugin-theme-ui": "^0.14.7",
+    "gatsby-remark-copy-linked-files": "^5.0.0",
+    "gatsby-remark-images": "^6.0.0",
     "gatsby-remark-images-medium-zoom": "^1.7.0",
-    "gatsby-remark-images-zoom": "^1.1.0",
-    "gatsby-remark-prismjs": "^3.5.1",
-    "gatsby-remark-reading-time": "^1.1.0",
-    "gatsby-remark-responsive-iframe": "^2.4.2",
-    "gatsby-source-filesystem": "^2.3.3",
-    "gatsby-transformer-remark": "^2.8.8",
-    "gatsby-transformer-sharp": "^2.5.2",
-    "netlify-cms": "^2.10.48",
-    "netlify-cms-app": "^2.12.12",
-    "node-sass": "^4.14.1",
-    "prismjs": "^1.20.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0",
-    "react-icons": "^3.10.0",
-    "theme-ui": "^0.3.1"
+    "gatsby-remark-prismjs": "^6.0.0",
+    "gatsby-remark-responsive-iframe": "^5.0.0",
+    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-transformer-remark": "^5.0.0",
+    "gatsby-transformer-sharp": "^4.0.0",
+    "netlify-cms-app": "^2.15.72",
+    "prismjs": "^1.29.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.12.0",
+    "reading-duration": "^1.1.0",
+    "sass": "^1.72.0",
+    "theme-ui": "^0.14.7"
   },
   "devDependencies": {
-    "acorn": "^6.4.1",
+    "acorn": "^8.8.2",
     "netlify-cms-lib-widgets": "^1.3.0",
-    "prettier": "2.0.5",
-    "react-refresh": "^0.8.2",
-    "redux": "^3.0.0",
-    "typescript": "^3.9.2"
+    "prettier": "^2.8.4",
+    "react-refresh": "^0.14.0",
+    "redux": "^4.2.1",
+    "typescript": "^4.9.5"
   }
 }
