--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/thucldnguyen"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
@@ -64,5 +65,8 @@
     "react-refresh": "^0.14.0",
     "redux": "^4.2.1",
     "typescript": "^4.9.5"
+  },
+  "resolutions": {
+    "multer": "^2.0.0"
   }
 }
