--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "url": "https://github.com/thucldnguyen"
   },
   "scripts": {
-    "preinstall": "npx npm-force-resolutions",
     "build": "GATSBY_EXPERIMENTAL_PAGE_BUILD_ON_DATA_CHANGES=true gatsby build --log-pages",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
@@ -22,51 +21,43 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "@theme-ui/prism": "^0.14.7",
+    "@mdx-js/react": "2.3.0",
     "disqus-react": "^1.1.5",
-    "gatsby": "^4.0.0",
-    "gatsby-plugin-advanced-sitemap": "^2.1.0",
+    "gatsby": "^5.14.5",
     "gatsby-plugin-disqus": "^1.2.6",
-    "gatsby-plugin-feed": "^4.0.0",
-    "gatsby-plugin-google-analytics": "^4.0.0",
-    "gatsby-plugin-image": "^2.0.0",
-    "gatsby-plugin-manifest": "^4.0.0",
-    "gatsby-plugin-netlify": "^4.0.0",
-    "gatsby-plugin-netlify-cms": "^6.0.0",
-    "gatsby-plugin-netlify-cms-paths": "^1.3.0",
-    "gatsby-plugin-offline": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-sass": "^5.0.0",
-    "gatsby-plugin-sharp": "^4.0.0",
-    "gatsby-plugin-sitemap": "^5.0.0",
-    "gatsby-plugin-theme-ui": "^0.14.7",
-    "gatsby-remark-copy-linked-files": "^5.0.0",
-    "gatsby-remark-images": "^6.0.0",
+    "gatsby-plugin-feed": "^5.14.0",
+    "gatsby-plugin-google-analytics": "^5.14.0",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-netlify": "^5.1.0",
+    "gatsby-plugin-offline": "^6.14.0",
+    "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-plugin-sass": "^6.14.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-plugin-sitemap": "^6.14.0",
+    "gatsby-remark-copy-linked-files": "^6.14.0",
+    "gatsby-remark-images": "^7.14.0",
     "gatsby-remark-images-medium-zoom": "^1.7.0",
-    "gatsby-remark-prismjs": "^6.0.0",
-    "gatsby-remark-responsive-iframe": "^5.0.0",
-    "gatsby-source-filesystem": "^4.0.0",
-    "gatsby-transformer-remark": "^5.0.0",
-    "gatsby-transformer-sharp": "^4.0.0",
-    "netlify-cms-app": "^2.15.72",
+    "gatsby-remark-prismjs": "^7.14.0",
+    "gatsby-remark-responsive-iframe": "^6.14.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
     "prismjs": "^1.29.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "reading-duration": "^1.1.0",
-    "sass": "^1.72.0",
-    "theme-ui": "^0.14.7"
+    "sass": "^1.72.0"
   },
   "devDependencies": {
     "acorn": "^8.8.2",
-    "netlify-cms-lib-widgets": "^1.3.0",
-    "prettier": "^2.8.4",
+    "ajv": "^8.0.0",
+    "ajv-keywords": "^5.0.0",
+    "prettier": "^3.0.3",
     "react-refresh": "^0.14.0",
     "redux": "^4.2.1",
-    "typescript": "^4.9.5"
-  },
-  "resolutions": {
-    "multer": "^2.0.0"
+    "typescript": "^5.2.2"
   }
 }
